# TastyFresh

./: .gitattributes  Cargo.toml  README.md  dev-test.tasty  development_test.bat  tastyfresh.sublime-syntax
config/: operators.json
examples/abstract_classes/: main.cpp  main.hpp  main.tasty
examples/attributes/: main.cpp  main.hpp  main.tasty
examples/dev_testing/: alt.cpp  alt.hpp  alt.tasty  main.cpp  main.hpp  main.tasty
examples/flow_control/: main.cpp  main.hpp  main.tasty
examples/hello_world/: alt.cpp  alt.hpp  alt.tasty  main.cpp  main.hpp  main.tasty
examples/new_inference/: main.cpp  main.hpp  main.tasty
examples/output_alignment/: main.cpp  main.tasty
examples/sample_class/: main.cpp  main.hpp  main.tasty
examples/template_parameters/: main.cpp  main.hpp  main.tasty
examples/tuples/: main.cpp  main.hpp  main.tasty
examples/type_casting/: main.cpp  main.hpp  main.tasty
src/: expression.rs  expression_components.rs  expression_parser.rs  expression_piece.rs  file_system.rs  main.rs  module.rs  module_component.rs  operator_data.rs  transpiler.rs  value_type.rs  variable_type.rs
src/config_management/: mod.rs  operator_data.rs
src/context_management/: context.rs  context_manager.rs  global_context.rs  header_context.rs  mod.rs  position.rs  source_files.rs  static_extension.rs  typing_context.rs
src/declaration_parser/: assume_declaration.rs  attribute_class_declaration.rs  attribute_declaration.rs  attributes.rs  class_declaration.rs  cpp_transpiler.rs  declaration.rs  function_declaration.rs  import_declaration.rs  mod.rs  parser.rs  (+6 more)
(+17 files in other folders)
