[package]
name = "tasty_fresh"
version = "0.1.0"
authors = ["Robert Borghese"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
colored = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.2"
